- update to new versions of several libraries
* junit5 - > adapt tests